@@ -1,6 +1,6 @@
 (*
- * Batlib_ExtLib_ExtString.String - Importing $1 module $2
- * Copyright (C) 2008 David Teller
+ * Batlib_ExtLib_ExtString.String - Importing ExtLib module ExtString.String
+ * Copyright (C) 2008 David Teller, LIFO, Universite d'Orleans
  * 
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
