@@ -1,0 +1,3 @@
+open Batteries.Data.Containers.Persistent.List
+
+let _ = iter print_endline ["a"; "b"; "c"]
